<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BlueHelm</string>
    <string name="menu_settings">Settings</string> 

         
    <string name="connect">Connect</string>
    <string name="tack_starboard">Tack Star</string>
    <string name="tack_port">Tack Port</string>
    <string name="increment_heading">+1 degree</string>
    <string name="decrement_heading">-1 degree</string>
    <string name="pause_autohelm">pause</string>
    <string name="compass_description">View the boat heading</string>
    <string name="statusText">Welcome</string>
    <color name="black">#000</color>
        <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth.</string>
    <string name="title_connecting">connecting</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="autohelm_settings">AutoHelm Settings</string>
    <string name="currentDisplay">Small Text</string>
    <string name="gpsDisplay">Small Text</string>


</resources>